# cdk-appmod-catalog-blueprints

./: .eslintrc.json  .gitattributes  .gitignore  .npmignore  .projenrc.ts  AGENTS.md  API.md  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.dev.json  update-examples.sh
.codex/: AGENTS.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.projen/: deps.json  files.json  tasks.json
examples/: .gitignore  README.md
mcp-appmod-catalog-blueprints/: README.md  pyproject.toml
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/: __init__.py  __main__.py  build_examples_index.py  defaults.py  errors.py  examples.py  generator.py  github_fetcher.py  models.py  registry.py  resolver.py  server.py
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/data/: examples-index.json  jsii-metadata
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/templates/dotnet/: compose.cs.j2  scaffold.cs.j2
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/templates/java/: compose.java.j2  scaffold.java.j2
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/templates/python/: compose.py.j2  scaffold.py.j2
mcp-appmod-catalog-blueprints/src/mcp_server_constructs/templates/typescript/: compose.ts.j2  scaffold.ts.j2
mcp-appmod-catalog-blueprints/tests/: __init__.py  conftest.py  test_build_examples_index.py  test_examples.py  test_examples_github_fallback.py  test_generator.py  test_github_fetcher.py  test_registry.py  test_resolver.py  test_server.py  test_server_examples.py
rosetta/: default.ts-fixture
skills/: README.md
use-cases/: README.md  index.ts
use-cases/framework/agents/resources/default-strands-agent/: batch.py  batch_agentcore.py  pyproject.toml  requirements.txt  shared_agent_logic.py  utils.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  (+1 more)
(+581 files in other folders)
