[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-appmod-catalog-blueprints"
version = "0.1.0"
description = "MCP server exposing AppMod Catalog Blueprints CDK constructs to AI tools"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "CDK Labs" },
]
keywords = ["mcp", "cdk", "aws", "constructs", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pytest-cov",
]

[project.scripts]
mcp-appmod-catalog-blueprints = "mcp_server_constructs.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_constructs"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_server_constructs/data/jsii-metadata" = "mcp_server_constructs/data/jsii-metadata"

[tool.pytest.ini_options]
testpaths = ["tests"]
