[project]
name = "appmod-catalog-blueprints-strands-agent"
version = "0.1.0"
description = "Used by either Lambda function or AgentCore Runtime to host the agentic code"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.0.0",
    "boto3>=1.0.0",
    "strands-agents-tools",
    "urllib3>=1.26.0,<2.0.0",
    "aws-lambda-powertools",
    "aws-xray-sdk",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "httpx"
]